hphp/hack/test/typecheck/tconst/invalid_access_root.php.exp
File "invalid_access_root.php", line 5, characters 9-9:
You are trying to access the property 'Const' but this is a value of generic type T (Typing[4062])
File "invalid_access_root.php", line 5, characters 12-16:
Definition is here
